ADDITION OF THE SALES FORECASTING MODULE-ITS FRONTEND DESIGN,VIEWS AND URLs.

--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.html
@@ -16,8 +16,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
+<!-- THIS IS A TEST SCRIPT ADDED TO MAKE SURE THAT BOTH LOG-IN AND REGISTER BUTTONS ARE PROPERLY FUNCTIONING -->
 <script>
-    console.log('Inline script running');
+    console.log('BUTTONS TEST COMMENCED.........');
     
     document.addEventListener('DOMContentLoaded', function() {
         console.log('DOM Content Loaded');
@@ -94,7 +95,7 @@
                 </div>
             
                 <div class="input-box">
-                    <input type="tel" placeholder="Phone Number" name="Phone Number" alt="Phone Number" required>
+                    <input type="tel" placeholder="Phone Number e.g. 0712345678" name="Phone Number" alt="Phone Number" required>
                     <i class="bx bxs-phone"></i>
                 </div>
 
